--- a/DivisasIosAPP/GoogleService-Info.plist
+++ b/DivisasIosAPP/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>783383033214-9r78levb441lsd2sisb83kgv09lc3ait.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.783383033214-9r78levb441lsd2sisb83kgv09lc3ait</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCTy6xQjkVzftiK2jQ4xeSgoG55YUeA6eo</string>
 	<key>GCM_SENDER_ID</key>
